# fluent-multiline-bug

./: Cargo.toml  README.md  test.ftl
src/: main.rs
