[package]
name = "fluent-multiline-bug"
version = "0.1.0"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluent = { git = "https://github.com/projectfluent/fluent-rs" }
fluent-syntax = { git = "https://github.com/projectfluent/fluent-rs" }